<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common strings -->
    <string name="app_name">Shaderize</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="about_title">About</string>
    <string name="about">
Full source code for this application is available on GitHub\n
www.github.com/harism/android_glsl\n
\n
Music is made by Mosaik, and you can find this song, and more,
for free download under Creative Commons license at\n
www.mosaik.se\n
\n
For error reporting, and so on, you can always leave me an email\n
harism@gmail.com
    </string>
    <!-- Settings key names -->
    <string name="key_play_music">play_music</string>
    <string name="key_divide_screen">divide_screen</string>
    <string name="key_show_title">show_title</string>
    <string name="key_reset">reset</string>
    <string name="key_scene">scene</string>
    <string name="key_quality">quality</string>
    <string name="key_light_count">light_count</string>
    <string name="key_light_model">light_model</string>
    <string name="key_ambient_factor">ambient_factor</string>
    <string name="key_diffuse_factor">diffuse_factor</string>
    <string name="key_specular_factor">specular_factor</string>
    <string name="key_shadows_enable">shadows_enable</string>
    <string name="key_bloom_enable">bloom_enable</string>
    <string name="key_lensblur_enable">lensblur_enable</string>
    <string name="key_lensblur_fstop">lensblur_fstop</string>
    <string name="key_lensblur_focal_plane">lensblur_focal_plane</string>
    <string name="key_lensblur_steps">lensblur_steps</string>
    <string name="key_fxaa_enable">fxaa_enable</string>

</resources>