<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:harism="http://schemas.android.com/apk/res/fi.harism.glsl" >

    <PreferenceCategory android:title="Scene" >

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/scene_entries"
            android:entryValues="@array/scene_values"
            android:key="@string/key_scene"
            android:summary="Select scene for rendering"
            android:title="Select scene" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Rendering" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_divide_screen"
            android:summary="Divides screen into two - showing original renderered image and filtered one side by side"
            android:title="Divide Screen" />

        <fi.harism.glsl.prefs.GlslSliderPreference
            android:defaultValue="2.0"
            android:key="@string/key_light_count"
            android:summary="Number of light sources. The bigger the value, the slower rendering will be"
            android:title="Lights (= %.0f)"
            harism:valueMax="4.0"
            harism:valueMin="1.0"
            harism:valuePrecision="1.0" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_per_pixel_lightning"
            android:summary="Calculates per pixel lightning"
            android:title="Per pixel lightning" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Filters" >

        <PreferenceScreen
            android:summary="Lens blur filter settings"
            android:title="Lens blur" >

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/key_lensblur_enable"
                android:summary="Enable / disable lens blur"
                android:title="Enable" />

            <fi.harism.glsl.prefs.GlslSliderPreference
                android:defaultValue="2.8"
                android:dependency="@string/key_lensblur_enable"
                android:key="@string/key_lensblur_fstop"
                android:summary="f/Stop"
                android:title="f/Stop (f/%.1f)"
                harism:valueMax="8"
                harism:valueMin="1"
                harism:valuePrecision="0.1" />

            <fi.harism.glsl.prefs.GlslSliderPreference
                android:defaultValue="0.5"
                android:dependency="@string/key_lensblur_enable"
                android:key="@string/key_lensblur_focal_plane"
                android:summary="Focal plane"
                android:title="Focal plane (= %.2f)"
                harism:valueMax="1"
                harism:valueMin="0"
                harism:valuePrecision="0.01" />

            <fi.harism.glsl.prefs.GlslSliderPreference
                android:defaultValue="10"
                android:dependency="@string/key_lensblur_enable"
                android:key="@string/key_lensblur_radius"
                android:summary="Blur radius"
                android:title="Radius (= %.0f)"
                harism:valueMax="20"
                harism:valueMin="1"
                harism:valuePrecision="1" />

            <fi.harism.glsl.prefs.GlslSliderPreference
                android:defaultValue="5"
                android:dependency="@string/key_lensblur_enable"
                android:key="@string/key_lensblur_steps"
                android:summary="Steps during blurring"
                android:title="Blur steps (= %.0f)"
                harism:valueMax="10"
                harism:valueMin="1"
                harism:valuePrecision="1" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Defaults values" >

        <Preference
            android:key="@string/key_reset"
            android:persistent="false"
            android:summary="Resets preferences back to default values"
            android:title="Reset preferences" />
    </PreferenceCategory>

</PreferenceScreen>